<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaInicial">

    <ImageView
        android:id="@+id/pfp"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:src="@drawable/pfp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/inputnotas"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="346dp"
        android:layout_height="82dp"
        android:ems="8"
        android:hint="@string/nulo"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/cbpaises"
        android:layout_width="346dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/inputnombre"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:ems="8"
        android:hint="@string/nulo"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtnotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/txtnota"
        app:layout_constraintBottom_toTopOf="@+id/inputnotas"
        app:layout_constraintEnd_toEndOf="@+id/inputnotas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputnotas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtnumeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/txtnumero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/txtpaises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/txtpais"
        app:layout_constraintBottom_toTopOf="@+id/cbpaises"
        app:layout_constraintEnd_toEndOf="@+id/cbpaises"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cbpaises"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996" />

    <TextView
        android:id="@+id/txtxnombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/txtnombre"
        app:layout_constraintBottom_toTopOf="@+id/inputnombre"
        app:layout_constraintEnd_toEndOf="@+id/inputnombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputnombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btncontsalvados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnContactos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <Button
        android:id="@+id/btnsalvarcontacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="346dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613">

        <EditText
            android:id="@+id/inputareacode"
            android:layout_width="61dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="8"
            android:inputType="phone"
            android:text="@string/nulo"
            tools:editable="false"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="416dp"
            android:editable="false" />

        <EditText
            android:id="@+id/inputtelefono"
            android:layout_width="291dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="8"
            android:hint="@string/nulo"
            android:inputType="phone"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="416dp"
            tools:text="@string/nulo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>